# prototype

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml  build.rs
client-cli/: Cargo.toml
client-cli/src/: main.rs
client/migrations/2017-11-12-145533_create_chunk_index/: down.sql  up.sql
client/src/: config.rs  lib.rs  main.rs  progress.rs
client/src/chunk_index/: chunk.rs  mod.rs  schema.rs  snapshot.rs  snapshotchunk.rs  tests.rs
client/src/chunk_index_builder/: mod.rs
client/src/create/: chunk_index_builder.rs  config.rs  create_error.rs  mod.rs
client/src/create_backup/: config.rs  create_chunk_index.rs  create_error.rs  create_utils.rs  mod.rs
client/src/list/: list_error.rs  mod.rs
client/src/list_backups/: error.rs  mod.rs
client/src/restore/: config.rs  mod.rs  restore_error.rs  restore_utils.rs
client/src/restore_backup/: config.rs  error.rs  mod.rs  utils.rs
client/src/tests/: chunk_index.rs  chunk_index_builder.rs  create_chunk_index.rs  create_utils.rs  mod.rs  restore_backup_utils.rs  test_data.rs
database-helpers/: Cargo.toml
database-helpers/src/: build_sqlite.rs  lib.rs
management/: Cargo.toml
management-cli/: Cargo.toml
management-cli/src/: main.rs
management/src/: lib.rs
node/: Cargo.toml  build.rs
node-cli/: .gitignore  Cargo.toml
node-cli/src/: main.rs
node/migrations/2017-11-11-133453_create_chunk_table/: down.sql  up.sql
node/src/: config.rs  lib.rs  main.rs  schedule.rs  service.rs  utils.rs
node/src/chunk_table/: chunk.rs  chunk_table.rs  mod.rs  schema.rs  tests.rs
node/src/schedule/: integrity_check.rs  mod.rs  replication.rs
node/src/service/: mod.rs  tests.rs
node/src/tests/: chunk_table.rs  chunk_table_utils.rs  mod.rs  service.rs  service_utils.rs  test_data.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  message.rs
storage/: Cargo.toml
storage/src/: lib.rs
storage/tests/: tests.rs
storage/tests/data/: lorem.txt
tools/: .gitignore  build-coverage.bash  build-junit-reports.bash  buildimages.bash  publishimages.bash  run-integration-tests.bash
tools/docker/: client.dockerfile  coverage.dockerfile  docker-compose.medium.yml  docker-compose.minimal.yml  node.dockerfile  rust-extended.dockerfile
tools/tests/: README.md  performance_test.py  requirements.txt  run.py
tools/tests/pyredbackup/: __init__.py  backup.py  client.py  configuration.py  helpers.py  node.py  utils.py
tools/tests/redbackup-test-data/: magic.txt
