[package]
name = "redbackup-client-cli"
version = "0.1.0"
authors = ["Raphael Zimmermann <dev@raphael.li>", "Fabian Hauser <fabian@fh2.ch>"]
homepage = "https://www.redbackup.org/"
license = "AGPL-3.0"

[dependencies]
clap = "2.27.1"
version = "2.0.1"

[dependencies.redbackup-client]
path = "../client"