[package]
name = "redbackup-client"
version = "0.1.0"
authors = ["Raphael Zimmermann <dev@raphael.li>", "Fabian Hauser <fabian@fh2.ch>"]
homepage = "https://www.redbackup.org/"
license = "AGPL-3.0"

[dependencies]
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
quick-error = "1.2.1"
chrono = "0.4"
uuid = { version = "0.5", features = ["v4"] }
diesel = { version = "0.16.0", features = ["sqlite", "chrono"] }
diesel_codegen = { version = "0.16.0", features = ["sqlite"] }
r2d2 = "0.7.4"
r2d2-diesel = "0.16.0"
dns-lookup = "0.8.1"

[dependencies.redbackup-protocol]
path = "../protocol"

[dependencies.redbackup-database-helpers]
path = "../database-helpers"

[build-dependencies]
diesel = { version = "0.16.0", features = ["sqlite"] }

[build-dependencies.redbackup-database-helpers]
path = "../database-helpers"
