[package]
name = "redbackup-client"
version = "0.1.0"
authors = ["Raphael Zimmermann <dev@raphael.li>", "Fabian Hauser <fabian@fh2.ch>"]
homepage = "https://www.redbackup.org/"
license = "AGPL-3.0"

[dependencies]
futures = "0.1"
futures-cpupool = "0.1.7"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
quick-error = "1.2.1"
chrono = "0.4"
uuid = { version = "0.5", features = ["v4"] }
diesel = { version = "0.16.0", features = ["sqlite", "chrono"] }
diesel_codegen = { version = "0.16.0", features = ["sqlite"] }
r2d2 = "0.7.4"
r2d2-diesel = "0.16.0"
dns-lookup = "0.8.1"
sha2 = "0.7.0"
digest = { version = "0.7.2", features = ["std"]}
log = "0.3.8"
glob = "0.2.11"

[dependencies.redbackup-protocol]
path = "../protocol"

[build-dependencies]
diesel = { version = "0.16.0", features = ["sqlite", "chrono"] }
