[package]
name = "redbackup-protocol"
version = "0.1.0"
authors = ["Raphael Zimmermann <dev@raphael.li>", "Fabian Hauser <fabian@fh2.ch>"]
homepage = "https://www.redbackup.org/"
license = "AGPL-3.0"

[dependencies]
bytes = "0.4"
futures = "0.1.11"
tokio-core = "0.1.0"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
serde_derive = "1.0.16"
serde = "1.0.16"
serde_json = "1.0.5"
chrono = { version = "0.4", features = ["serde"] }
log = "0.3.8"
